--- a/databases-and-py.ipynb
+++ b/databases-and-py.ipynb
@@ -2,12 +2,12 @@
     "metadata": {
         "kernelspec": {
             "name": "python3",
-            "display_name": "Python 3",
+            "display_name": "Python 3 (ipykernel)",
             "language": "python"
         },
         "language_info": {
             "name": "python",
-            "version": "3.8.8",
+            "version": "3.8.10",
             "mimetype": "text/x-python",
             "codemirror_mode": {
                 "name": "ipython",
@@ -50,14 +50,14 @@
             "cell_type": "code",
             "source": [
                 "# Import sqlite3 and pandas.\n",
-                ""
+                "import sqlite3 as sl"
             ],
             "metadata": {
                 "azdata_cell_guid": "865655b0-22e9-47f4-a5df-4bfe97dda4a3",
                 "tags": []
             },
             "outputs": [],
-            "execution_count": 15
+            "execution_count": 7
         },
         {
             "cell_type": "markdown",
@@ -74,13 +74,13 @@
             "cell_type": "code",
             "source": [
                 "# Create a new database called exercises.db.\n",
-                ""
+                "con = sl.connect('exercises.db')"
             ],
             "metadata": {
                 "azdata_cell_guid": "707abc33-c6ee-416e-9358-c799f1fcbb12"
             },
             "outputs": [],
-            "execution_count": 16
+            "execution_count": 11
         },
         {
             "cell_type": "markdown",
@@ -98,13 +98,20 @@
             "cell_type": "code",
             "source": [
                 "# Create a new table in your database.\n",
-                ""
+                "with con:\n",
+                "    con.execute(\"\"\"\n",
+                "    CREATE TABLE favorite_books(\n",
+                "        title TEXT NOT NULL PRIMARY KEY,\n",
+                "        author TEXT,\n",
+                "        short TEXT\n",
+                "    );\n",
+                "    \"\"\")"
             ],
             "metadata": {
                 "azdata_cell_guid": "3cc6b80e-3fa2-4d2e-b2a9-1ea5d68ba01e"
             },
             "outputs": [],
-            "execution_count": 17
+            "execution_count": 12
         },
         {
             "cell_type": "markdown",
@@ -121,13 +128,20 @@
             "cell_type": "code",
             "source": [
                 "# Add your 3 favorite books to your table.\n",
-                ""
+                "favbooks_sql = 'INSERT INTO favorite_books(title, author, short) values (?,?,?)'\n",
+                "data = [\n",
+                "    ('PatternMaster', 'Octavia Butler', 'An ancient living woman trying to survive the worst of humanity'),\n",
+                "    ('The Book of Coming Forth by Day', 'The Dead', 'Kemetic Cosmology'),\n",
+                "    ('The Color Purple', 'Alice Walker', 'Overcoming Obstacles')\n",
+                "]\n",
+                "with con:\n",
+                "    con.executemany(sql, data)"
             ],
             "metadata": {
                 "azdata_cell_guid": "c7b8e386-f3f4-42ad-aa91-a2da2e7904a5"
             },
             "outputs": [],
-            "execution_count": 18
+            "execution_count": 13
         },
         {
             "cell_type": "markdown",
